@@ -5,6 +5,7 @@ WildcardX: *BOTS* Fixed the bots illusion bug that caused a bots gender and race
 WildcardX: *BOTS* Added new bots command, "#bot giveitem". This command lets you give a NO DROP, NO TRADE item to your bot as long as its on your cursor.
 WildcardX: *BOTS* Added new commands, "#bot camp" and "#bot camp all". The first orders your bots to camp out if you target them. The second orders all bots you own to camp out, no need to target each.
 Trevius: Created methods for when an NPC is spawned to clean up the NPC code some.
+WildcardX: *BOTS* Fixed a bug caused by using #bot giveitem that didn't update the client that the iyem that was on the cursor is now gone.
 
 ==08/08/2009==
 WildcardX: *BOTS* More code refactoring.
